--- a/data/styles.css
+++ b/data/styles.css
@@ -453,7 +453,7 @@ footer {
     align-items: center; /* Centraliza verticalmente os elementos */
     position: relative; /* Posicionamento relativo para ajustar elementos filhos */
     top: 0;
-    left: 92%;
+    left: 85%;
 }
 
 .user-options button, .cart-button, .social-button {
@@ -578,6 +578,29 @@ footer {
 
     .close {
         font-size: 24px; /* Tamanho de fonte reduzido para o botão de fechar */
+    }
+    .filter-container {
+        margin-bottom: 10px;
+        display: flex;
+        justify-content: center;
+        gap: 5px;
+        align-items: center;
+    }
+    
+    .filter-container select, .filter-container button {
+        padding: 5px;
+        font-size: 0.75rem;
+        border: 1px solid var(--color4);
+        border-radius: 4px;
+        background-color: var(--color5);
+        box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+        cursor: pointer;
+        transition: box-shadow 0.3s;
+    }
+    
+    .filter-container select:focus, .filter-container button:focus {
+        outline: none;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
     }
 
 }
