--- a/data/styles.css
+++ b/data/styles.css
@@ -763,17 +763,17 @@ footer {
     
     .popup-details {
         padding: 10px;
-        width: 100%;
-        max-width: 390px;
+        width: 90%;
+        max-width: 495px;
         height: auto;
-        max-height: 9vh;
+        max-height: 10vh;
         overflow-y: visible;
-        margin: 0px auto;
+        margin: -10px auto;
         border-radius: 10px;
         background-color: var(--color3);
         box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
         position: fixed;
-        top: 103%;
+        top: 105%;
         left: 50%;
         line-height: 0;
         transform: translate(-50%, -50%);
@@ -783,7 +783,16 @@ footer {
         justify-content: center;
         align-items: baseline;
     }
-    
+    .popup-info-container {
+        padding: 10px;
+        width: 75%;
+        max-width: 450px;
+        height: 0;
+        max-height: 0;
+        margin-top: -5px;
+        text-align: justify;
+        overflow: visible; /* Garante que o conteúdo não ultrapasse o contêiner */
+    }
     .popup-description-container {
         padding: 10px;
         width: 96%;
