--- a/data/styles.css
+++ b/data/styles.css
@@ -735,14 +735,14 @@ footer {
     }
     .popup-content {
         padding: 10px;
-        width: 90%;
+        width: 80%;
         max-width: 600px;
         height: auto;
         max-height: 90vh; /* Limita a altura do popup a 90% da altura da viewport */
         overflow-y: auto; /* Permite rolagem vertical se necessário */
         margin: 0 auto;
         border-radius: 8px;
-        background-color: #fff;
+        background-color: #1d0303;
         box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
         position: fixed;
         top: 50%;
